[package]
name = "whois-server"
version = "0.2.0"
edition = "2024"
license = "AGPL-3.0-or-later"
authors = ["Akaere Networks"]
description = "A WHOIS server with DN42 support"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
anyhow = "1.0.79"
clap = { version = "4.4.14", features = ["derive"] }
regex = "1.10.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
cidr = "0.2.2"
chrono = { version = "0.4.31", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
urlencoding = "2.1"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde_json = "1.0"
tokio-util = "0.7"
rayon = "1.8"
tokio-cron-scheduler = "0.11"
lmdb = "0.8.0"
rand = "0.8"
rustls = "0.21"
x509-parser = "0.15"
der-parser = "9.0"
sha1 = "0.10"
sha2 = "0.10"
dotenv = "0.15"
russh = "0.45"
russh-keys = "0.45"
async-trait = "0.1"
