[package]
name = "whois-server"
version = "0.3.1"
edition = "2024"
license = "AGPL-3.0-or-later"
authors = ["Akaere Networks"]
description = "A WHOIS server with DN42 support and comprehensive query capabilities"
repository = "https://github.com/Akaere-NetWorks/whois-server"
keywords = ["whois", "dn42", "network", "asn", "bgp"]
categories = ["network-programming", "command-line-utilities"]

[lib]
name = "whois_server"
path = "src/lib.rs"

[[bin]]
name = "whois-server"
path = "src/main.rs"

[dependencies]
rdap = { git = "https://github.com/Akaere-NetWorks/rdap.git", rev = "4cb1f62" }
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
regex = "1.12.2"
chrono = { version = "0.4.42", features = ["serde"] }
atty = "0.2"
thiserror = "1.0"
cidr = "0.2.3"
reqwest = { version = "0.11", features = [
    "json",
    "blocking",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
urlencoding = "2.1"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde_json = "1.0"
tokio-util = "0.7"
rayon = "1.11"
tokio-cron-scheduler = "0.11"
lmdb = "0.8.0"
rand = "0.8"
rustls = "0.21"
x509-parser = "0.15"
der-parser = "9.0"
sha1 = "0.10"
sha2 = "0.10"
sysinfo = "0.32"
dotenv = "0.15"
once_cell = "1.21"
russh = "0.45"
russh-keys = "0.45"
async-trait = "0.1"

# Pixiv client dependencies
base64 = "0.21"
uuid = { version = "1.0", features = ["v4", "serde"] }
hmac = "0.12"
md5 = "0.7"
lazy_static = "1.4"
url = "2.2"
